--- a/platforms/android/local.properties
+++ b/platforms/android/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 06 15:24:41 CST 2018
-ndk.dir=/Users/admin/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/admin/Library/Android/sdk
+#Thu Jun 07 21:23:57 CST 2018
+sdk.dir=H\:\\31gsdk\\sdk
