--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -80,4 +80,12 @@ dependencies {
     compile 'com.taobao.android:weexplugin-processor:1.3'
     compile 'com.taobao.android:weexplugin-annotation:1.3'
     // PLUGIN GRADLE EXTENSIONS END
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.alibaba:fastjson:1.1.46.android'
+    compile 'com.taobao.android:weex_sdk:0.5.1@aar'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.android.support.constraint:constraint-layout:1.1.1'
 }
