--- a/platforms/android/local.properties
+++ b/platforms/android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 15 14:00:44 CST 2018
-sdk.dir=D\:\\SDK
+#Fri Jun 15 20:37:30 CST 2018
+sdk.dir=H\:\\31gsdk\\sdk
