--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "echarts": "^4.1.0",
     "phantom-limb": "0.0.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
